--- a/analysis/benchmarkset_characterization.qmd
+++ b/analysis/benchmarkset_characterization.qmd
@@ -28,7 +28,7 @@ analysis_setup(
 
 This analysis uses **primary aggregated metrics** rather than loading full variant tables directly. This approach is faster, more memory-efficient, and sufficient for most analyses. See the [Pipeline Outputs Reference](../docs/pipeline-outputs.md) for details on when to load detailed variant tables.
 
-### Primary Metrics (Recommended)
+### Primary Metrics
 
 ```{r load_primary}
 analysis_data <- load_primary_analysis_data(
@@ -43,45 +43,6 @@ list2env(analysis_data, envir = environment())
 variants_df <- variants_df %>% filter(region_ids == "BMKREGIONS")
 ```
 
-
-### Key Data Frames for Analysis
-
-These data frames are the primary inputs for downstream analyses:
-
-**genomic_context_metrics_df** - Aggregated metrics with variant counts
-- One row per genomic context per benchmark
-- Contains: variant counts by type, coverage metrics, variant density
-- Use for: variant count comparisons, density calculations, coverage analysis
-- Columns: `bench_version`, `ref`, `bench_type`, `context_name`, `total_variants`, `snv_count`, `indel_count`, `del_count`, `ins_count`, `complex_count`, `variant_density_per_mb`
-- **Variables are pre-factored** with standard levels (no manual factoring needed)
-
-**bench_regions_df** - Benchmark region intervals
-- All intervals from benchmark BED files with standardized format
-- Use for: coverage calculations, interval size distributions, spatial analysis
-- Columns: `chrom`, `start`, `end`, `interval_size`, `bench_version`, `ref`, `bench_type`
-- **Variables are pre-factored** with standard levels (chromosomes, benchmark versions, references)
-
-**ref_sizes_df** - Reference genome sizes
-- Chromosome-level sizes and N-content
-- Use for: percentage calculations, normalization, completeness assessment
-- Columns: `ref`, `chrom`, `length`, `ns`, `asm_bp`
-
-### Note on Full Variant Data
-
-If variant-level detail is required (analyzing specific variant properties, edge cases, etc.), full variant tables can be loaded using:
-
-```r
-variants <- load_variant_table(
-  "v5.0q_GRCh38_smvar",
-  filters = list(
-    chromosomes = c("chr1", "chr2"),  # Reduce memory usage
-    variant_types = c("SNV", "INDEL"),
-    in_benchmark_only = TRUE
-  )
-)
-```
-
-However, this is significantly slower (minutes) and memory-intensive (~1 GB), so use only when aggregate metrics are insufficient.
 
 ## Benchmark Set Summary Table
 
@@ -157,7 +118,8 @@ stvar_len_df <- variants_df %>%
     bench_type == "stvar"
   ) %>%
   mutate(ref = std_references(ref)) %>%
-  select(bench_version, bench_type, ref, chrom, pos, var_size)
+  select(bench_version, bench_type, ref, chrom, pos, var_size) %>% 
+  filter(abs(var_size) < 20000)
 
 (stvar_len_dist_plt <- ggplot(
   stvar_len_df,
@@ -193,7 +155,7 @@ stvar_len_df <- variants_df %>%
       5000,
       10000
     ),
-    trans = scales::pseudo_log_trans(sigma = 50, base = 10),
+    trans = scales::pseudo_log_trans(sigma = 100, base = 10),
     labels = scales::comma
   ) +
   scale_y_continuous(labels = scales::comma) +
